Se implementa consulta de rondas desde la base de datos, para que se puedan mostrar en los jlabel correspondientes, en la interfaz de JugarView.

--- a/juegoPreguntas/src/juegopreguntas/vista/JugarView.form
+++ b/juegoPreguntas/src/juegopreguntas/vista/JugarView.form
@@ -43,13 +43,13 @@
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" attributes="0">
-                                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jl_descripcionRonda" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jl_premio" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jrb_opcion4" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -69,9 +69,9 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jl_descripcionRonda" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jl_premio" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
               <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
@@ -93,7 +93,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="jl_descripcionRonda">
       <Properties>
         <Property name="text" type="java.lang.String" value="DESCRIPCI&#xd3;N RONDA"/>
       </Properties>
@@ -103,7 +103,7 @@
         <Property name="text" type="java.lang.String" value="PREMIO: "/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel3">
+    <Component class="javax.swing.JLabel" name="jl_premio">
       <Properties>
         <Property name="text" type="java.lang.String" value="$VALOR PREMIO"/>
       </Properties>
