--- a/juegoPreguntas/src/juegopreguntas/vista/PrincipalView.form
+++ b/juegoPreguntas/src/juegopreguntas/vista/PrincipalView.form
@@ -99,6 +99,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="JUGAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jb_jugarActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
